Fix issue with long(ish) URLs breaking the layout on smaller devices

--- a/src/components/Blocks/ImageCards/css/carousel.less
+++ b/src/components/Blocks/ImageCards/css/carousel.less
@@ -13,7 +13,12 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: linear-gradient(45deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.64) 14%, rgba(0, 0, 0, 0) 49%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(45deg,
+      rgba(0, 0, 0, 0.9) 0%,
+      rgba(0, 0, 0, 0.64) 14%,
+      rgba(0, 0, 0, 0) 49%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
 
   .slider-wrapper {
